--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<!doctype html>
 <html>
+<head>
+    <meta charset="utf-8"/>
+    <title>Phonegap Test</title>
+</head>
 <body>
 <script src="phonegap.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
