--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </script>
     
     <script src="phonegap.js"></script>
-    <script src="//cdn.jsdelivr.net/handlebarsjs/3.0.3/handlebars.js"></script>
-    <!--<script src="lib/handlebars.js"></script>-->
+    <!--<script src="//cdn.jsdelivr.net/handlebarsjs/3.0.3/handlebars.js"></script>-->
+    <script src="lib/handlebars.js"></script>
     <script src="lib/jquery-1.8.2.min.js"></script>
     <script src="js/storage/memory-store.js"></script>
     <script src="js/main.js"></script>
