--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href='tel:{{cellPhone}}'>Call Cell<br/>{{cellPhone}}</a></li>
                 <li><a href='sms:{{cellPhone}}'>SMS<br/>{{cellPhone}}</a></li>
                 <li><a href='#' class='add-location-btn'>Add Location</a></li>
+                <li><a href='#' class='add-contact-btn'>Add To Contacts</a></li>
             </ul>
         </div>
     </script>
